# DataCompare

./: .gitignore  AI_WORKFLOW.md  README.md  compare.py  data_compare.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ai-refactor.yml  ai-refactory.yml  github-ai-refactor.yml
ai/prompts/: daily_objectives.md  failure_recovery.md
benchmarks/: benchmark_compare.py
src/: __init__.py  compare.py  data_compare.py
tests/: test_cli_json.py  test_sales_compare.py
