[project]
name = "datacompare"
version = "1.0.0"
description = "Advanced file comparison tool for CSV and Excel files"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.34.0",
    "tkinterdnd2>=0.4.3",
    "fastexcel>=0.16.0",
]

[project.scripts]
datacompare = "src.data_compare:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
